--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,8 +56,9 @@
     <Analyzer Include="C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\1_Scripts\ClockTest.cs" />
-    <Compile Include="Assets\1_Scripts\PenduloTest.cs" />
+    <Compile Include="Assets\1_Scripts\ClockBehaviour.cs" />
+    <Compile Include="Assets\1_Scripts\NeedleBehaviour.cs" />
+    <Compile Include="Assets\1_Scripts\PendolumBehaviour.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
